moving logic to fix incorrect height on mobile

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -24,10 +24,6 @@ body {
   margin: 0;
   background-color: var(--primary);
   color: #fff;
-
-  @media not all and (hover:hover) {
-    height: var(--app-height);
-  }
 }
 
 @define-mixin primary-font {
